@@ -1,4 +1,8 @@
-﻿drkns 03.06.2015 20:24:43 +0200 - build 4385
+﻿zg 03.06.2015 21:49:26 +0200 - build 4386
+
+1. 0003001: В ночных сборках сломалась работа скрипта BookmarkManager.
+
+drkns 03.06.2015 20:24:43 +0200 - build 4385
 
 1. 0003000: проблема копирования экрана с ключом /ag
 
